# Exam-guardrial-middleware

./: .env.example  .vercelignore  DEPLOY_NOW.md  LICENSE  MANIFEST.in  README.md  VERCEL_DEPLOYMENT.md  check_db.py  check_missing.py  check_type.py  check_visibility.py  clear_db.py  debug_schema.py  debug_students.py  docker-compose.yml  output.md  package-lock.json  pyproject.toml  quick_check.py  refactor.py  refactor_v2.py  requirements.txt  search_tables.py  simulate_hidden_window.py  test_admin_login.py  test_backend.py  test_insert.py  test_kill_switch.py  test_sentinel_l2.py  vercel.json
api/: index.py
backend/: .env  check_db.py  debug_import.py  debug_report.py  error.txt  ingest_all_demo_data.py  requirements.txt  seed_db.py  server_log.txt  server_log_8001.txt  server_log_8002.txt  server_log_v2.txt  server_log_v3.txt  server_log_v4.txt  test_report.py
backend/app/: config.py  main.py
backend/db/: schema.sql
browser-extension/: INTEGRATION_GUIDE.md  README.md  SETUP_GUIDE.md  background.js  content.js  manifest.json  popup.html  popup.js  test-page.html
dashboard/: .env  .gitignore  index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.css  App.jsx  config.js  index.css  main.jsx
exam-guardrail-sdk/: .npmignore  ProctoringOverlay.jsx  README.md  index.js  package-lock.json  package.json  rollup.config.js  useGuardrail.js
exam-guardrail-sdk/src/: GuardrailSDK.js  ProctoringOverlay.jsx  index.js  overlay.js  react.js  useGuardrail.js
exam-guardrial/backend/: config.py  exam_routes.py  main.py  models.py  storage.py
exam_guardrail/: __init__.py  config.py  core.py  db.py  models.py
exam_guardrail.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
native-agent/: .gitignore  ExamGuardrail_Complete_Build_Guide.docx  agent.py  agent_log.txt  exam_start.bat  install_service.bat  launch_silent.pyw  process_forensics.py  proctor_view.bat  read_logs.bat  requirements.txt  test_wda.py  uninstall_service.bat
src/: App.jsx
src/pages/: Dashboard.jsx  (+2 more)
tmp/: check_session.py  check_sessions.py  check_supabase.py  diag.py  find_cluely.py  list_sessions.py  test_ext.py
(+121 files in other folders)
