[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "exam-guardrail"
version = "1.0.0"
description = "Drop-in exam proctoring middleware for FastAPI applications"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "python-dotenv",
    "pydantic-settings",
    "supabase",
    "anthropic",
    "pandas",
    "openpyxl",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]
