[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exam-guardrail"
version = "1.0.1"
description = "Drop-in exam proctoring middleware for FastAPI — violation detection, camera/mic proctoring, credibility scoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "CogniVigil"}
]
keywords = ["exam", "proctoring", "middleware", "fastapi", "anti-cheating", "guardrail", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "websockets>=11.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "supabase>=2.0.0",
    "anthropic>=0.20.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "psutil>=5.9.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.urls]
Homepage = "https://github.com/Ghost-Busters-1984/Exam-guardrial-middleware"
Repository = "https://github.com/Ghost-Busters-1984/Exam-guardrial-middleware"

[tool.setuptools.packages.find]
include = ["exam_guardrail*"]
